# Trapped_Ion_Programmer_of_Ising_Spin_Models

./: .gitignore  LICENSE  README.md  pyproject.toml
TrICal/: .gitignore  readme.md  setup.py
TrICal/docs/: open.py
TrICal/docs/source/: conf.py  index.rst  trical.classes.rst  trical.control.rst  trical.data.rst  trical.misc.rst  trical.rst
TrICal/trical/: __init__.py
TrICal/trical/classes/: __init__.py  base.py  potential.py  spinlattice.py  trappedions.py
TrICal/trical/control/: __init__.py  efreqs.py  evecs.py  nm.py
TrICal/trical/data/: __init__.py  data.py
TrICal/trical/misc/: __init__.py  constants.py  linalg.py  multispecies.py  optimize.py  polynomial.py
TrICal/tutorial/: multispecies tutorial.ipynb  tutorial.ipynb
scripts/: experiment.py  test.py  train.py
triprism/: data.py  model.py
